# rust-to-prolog

./: .gitignore  Cargo.toml  README.md
.agentrail/: plan.md  saga.toml
.agentrail/sessions/: 15170598-19b2-4a90-b4e5-b13fbdcd0040.jsonl  (+6 more)
docs/: ai_agent_instructions.md  alice-lion-unicorn.txt  architecture.md  background.txt  demo-plan-status.md  demos.md  design.md  limitations.md  porting-plan.md  prd.md  rationale.md
examples/: ancestor.pl  append.pl  color.pl  fib.pl  hello.pl  liar.pl  max.pl  member.pl  neq.pl  neq_ok.pl  path.pl  path_show.pl  sum.pl
reg-rs/: .gitignore  r2p_ancestor.out  r2p_ancestor.rgt  r2p_append.out  r2p_append.rgt  r2p_color.out  r2p_color.rgt  r2p_fib.out  r2p_fib.rgt  r2p_hello.out  r2p_hello.rgt  r2p_liar.out  r2p_liar.rgt  r2p_max.out  r2p_max.rgt  r2p_member.out  r2p_member.rgt  r2p_neq.out  r2p_neq.rgt  r2p_neq_ok.out  r2p_neq_ok.rgt  r2p_path.out  r2p_path.rgt  r2p_path_show.out  r2p_path_show.rgt  r2p_sum.out  r2p_sum.rgt
scripts/: port-audit.sh  run-regression.sh  run-tests.sh
src/: asm.rs  compile.rs  emit.rs  lib.rs  parse.rs  tokenize.rs
tests/: integration.rs
web-ui/: Cargo.toml  Trunk.toml  build.rs  build.sh  index.html  serve.sh
web-ui/.cargo/: config.toml
web-ui/pages/: index.html  web-sw-rust-to-prolog-b22ade675bf9d30.js  web-sw-rust-to-prolog-b22ade675bf9d30_bg.wasm  web-sw-rust-to-prolog-c1af91c269c76ac4.js  web-sw-rust-to-prolog-c1af91c269c76ac4_bg.wasm  web-sw-rust-to-prolog-c9b2f2f81d3e38f9_bg.wasm
web-ui/scripts/: build-pages.sh
web-ui/src/: demos.rs  lib.rs  main.rs  runner.rs  ui.css
(+129 files in other folders)
