[package]
name = "web-sw-rust-to-prolog"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Browser-based Prolog sandbox running the rust-to-prolog pipeline in WASM"
authors = ["Michael A Wright"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-to-prolog = { path = ".." }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlElement",
    "KeyboardEvent",
] }
gloo = "0.11"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
